--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A PDF Q&A bot with a web interface",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +14,11 @@
   "dependencies": {
     "@langchain/community": "^0.0.34",
     "@langchain/openai": "^0.0.14",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "langchain": "^0.1.17",
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1"
