--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "dev": "NODE_ENV=development node server.js",
+    "build": "netlify build"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,13 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "formidable": "^3.5.1",
     "helmet": "^7.1.0",
     "langchain": "^0.1.17",
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "@netlify/functions": "^2.6.0"
   }
 }
