Update Netlify configuration and functions: add esbuild bundler, include pdf-parse dependency, implement CORS handling in query and upload functions, and refactor file upload logic to handle multipart/form-data.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,10 @@
   functions = "netlify/functions"
   publish = "."
 
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["pdf-parse"]
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
